--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://ketryin.github.io/js-project",
+  "homepage": "https://ketryin.github.io/event-booster-project",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /js-project/"
+    "build": "parcel build src/*.html --public-url /event-booster-project/"
   },
   "repository": {
     "type": "git",
