--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "@firebase/app": "^0.6.27",
+    "@firebase/auth": "^0.16.7",
     "choices.js": "^9.0.1",
+    "email-validator": "^2.0.4",
     "lodash.debounce": "^4.0.8"
   }
 }
